<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_4x"
    android:background="@drawable/bg_rounded"
    android:padding="@dimen/size_3x">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/size_image"
        android:layout_height="@dimen/size_image"
        android:src="@drawable/avatar"
        app:shapeAppearanceOverlay="@style/RoundedImage" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_4x"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_2x">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="@dimen/text_size_4x" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle"
                android:paddingHorizontal="@dimen/size_2x"
                android:paddingVertical="@dimen/size_1x"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="@dimen/text_size_3x" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_2x">

            <TextView
                android:id="@+id/tv_job"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/job_title"
                android:textColor="@color/dark_blue"
                android:textFontWeight="500"
                android:textSize="@dimen/text_size_3x" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/dark_blue"
                android:textFontWeight="500"
                android:textSize="@dimen/text_size_3x" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_2x">

            <ImageView
                android:id="@+id/iv_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/pin_description"
                android:src="@drawable/ic_pin" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/work_country"
                android:textColor="@color/grey"
                android:textFontWeight="400"
                android:textSize="@dimen/text_size_3x" />

            <TextView
                android:id="@+id/tv_publish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_time"
                android:textColor="@color/light_blue"
                android:textFontWeight="400"
                android:textSize="@dimen/text_size_3x" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews_count"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="@dimen/text_size_3x" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_2x"
                android:layout_marginEnd="@dimen/size_1x"
                android:text="@string/rating"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="@dimen/text_size_3x" />

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/star_description"
                android:src="@drawable/ic_star" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>